<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.myapplication.MainActivity">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/cardNormal"
            android:background="@drawable/card_default"
            android:paddingTop="22dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/cardLayout3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearLayout33"
                android:gravity="center_vertical|center|center_horizontal">

                <TextView
                    style="@style/dialogMessage"
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_message1"
                    android:id="@+id/textView41"
                    android:gravity="center_vertical|center|center_horizontal"
                    android:layout_gravity="center_horizontal"  />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout33"
                android:layout_marginTop="19dp"
                android:id="@+id/linearLayout34" >

                <Button
                    android:layout_width="fill_parent"
                    android:textSize="@dimen/text_size_medium"
                    style="@style/btnSecondaryDisabled"
                    android:text="@string/no"
                    android:id="@+id/btnYes"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:shadowColor="@null"/>

                <Button
                    android:layout_width="fill_parent"
                    android:textSize="@dimen/text_size_medium"
                    style="@style/btnSecondary"
                    android:text="@string/yes"
                    android:id="@+id/btnNo"

                    android:layout_weight="1"
                    android:shadowColor="@null"/>

            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>
</ScrollView>