<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"

        tools:context="com.example.myapplication.MainActivity"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/statusBarOnDuty"
            android:layout_marginBottom="10dp">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/statusBar"
                android:background="@drawable/status_bar"
                android:text="Bradley Jones"
                android:id="@+id/driverName" />

        </LinearLayout>

        <RelativeLayout
            style="@style/cardNormal"
            android:background="@drawable/card_default"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/cardLayout55"
            android:paddingTop="16dp"
            android:layout_below="@+id/statusBarOnDuty">


            <LinearLayout
                android:id="@+id/switchContainer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="On Duty"
                        android:textSize="16sp"
                        android:id="@+id/textView42"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />


                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@null"
                        android:id="@+id/switch2"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />



                </RelativeLayout>
            </LinearLayout>

            <View
                style="@style/horzLine"
                android:id="@+id/horzLine55"
                android:layout_width="fill_parent"
                android:layout_below="@id/switchContainer1"/>

            <LinearLayout
                android:layout_below="@id/horzLine55"
                android:id="@+id/switchContainer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mobile Dispatch"
                        android:textSize="16sp"
                        android:id="@+id/textView42"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />


                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@null"
                        android:id="@+id/switch2"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />



                </RelativeLayout>
            </LinearLayout>










        </RelativeLayout>





        <!--<RelativeLayout-->
            <!--style="@style/cardNormal"-->
            <!--android:background="@drawable/card_no_radius_bottom"-->
            <!--android:layout_marginBottom="0dp"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:paddingRight="10dp"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:id="@+id/cardLayout09"-->
            <!--android:layout_below="@+id/statusBarOnDuty">-->

            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:id="@+id/linearLayout29"-->
                <!--android:weightSum="1"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_alignParentEnd="true">-->

                <!--<RelativeLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:gravity="center_vertical" >-->

                    <!--<TextView-->
                        <!--style="@style/textSubheadMedium"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="On Duty"-->
                        <!--android:id="@+id/textView42"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:layout_alignParentLeft="true"-->
                        <!--android:layout_alignParentStart="true"-->
                        <!--android:layout_marginRight="5dp" />-->

                <!--</RelativeLayout>-->

                <!--<RelativeLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent">-->

                    <!--<Switch-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:id="@+id/switch1"-->
                        <!--android:layout_alignParentTop="true"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:layout_alignParentEnd="true" />-->

                <!--</RelativeLayout>-->

            <!--</LinearLayout>-->

        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
            <!--style="@style/cardNormal"-->
            <!--android:background="@drawable/card_radius_bottom_white"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:paddingRight="10dp"-->
            <!--android:layout_marginTop="0dp"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:id="@+id/cardLayout10"-->
            <!--android:layout_below="@+id/cardLayout09">-->

            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:id="@+id/linearLayout30"-->
                <!--android:weightSum="1"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_alignParentEnd="true">-->

                <!--<RelativeLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:gravity="center_vertical" >-->

                    <!--<TextView-->
                        <!--style="@style/textSubheadMedium"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="Mobile Dispatch"-->
                        <!--android:id="@+id/textView43"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:layout_alignParentLeft="true"-->
                        <!--android:layout_alignParentStart="true"-->
                        <!--android:layout_marginRight="5dp" />-->

                <!--</RelativeLayout>-->

                <!--<RelativeLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent">-->

                    <!--<Switch-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:id="@+id/switch1"-->
                        <!--android:layout_alignParentTop="true"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:layout_alignParentEnd="true"-->
                        <!--android:checked="true" />-->

                <!--</RelativeLayout>-->

            <!--</LinearLayout>-->

        <!--</RelativeLayout>-->

        <RelativeLayout
            style="@style/cardNormal"
            android:background="@drawable/card_default"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/formLayout"
            android:layout_below="@+id/cardLayout55">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/firstNameContainer">

                    <EditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/first_name_label"
                        android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/firstNameContainer"
                android:id="@+id/lastNameContainer" >

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/last_name_label"
                        android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/lastNameContainer"
                android:id="@+id/idContainer" >

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/id_label"
                        android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/idContainer"
                android:id="@+id/phoneContainer" >

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/phone_label"
                        android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/phoneContainer"
                android:id="@+id/emailContainer" >


                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="29dp"
                        android:hint="@string/email_label"
                        android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/emailContainer"
                android:id="@+id/photoContainer" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginBottom="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:id="@+id/imageView10"
                        android:background="@mipmap/ic_no_pic"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_small"
                        android:textColor="@color/colorAccent"
                        android:text="Replace Image"
                        android:id="@+id/textView72"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout32">


                    <Button
                        android:layout_width="fill_parent"
                        android:textSize="@dimen/text_size_medium"
                        style="@style/btnSecondaryDisabled"
                        android:text="@string/cancel"
                        android:id="@+id/btnCancel"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:shadowColor="@null"/>

                    <Button
                        android:layout_width="fill_parent"
                        android:textSize="@dimen/text_size_medium"
                        style="@style/btnSecondary"
                        android:text="@string/save"
                        android:layout_weight="1"
                        android:shadowColor="@null"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>



    </RelativeLayout>

</ScrollView>